Update and rename index.html to indexDemo1.html

--- a/indexDemo1.html
+++ b/indexDemo1.html
@@ -32,7 +32,7 @@
             z-index: 1;
         }
 
-        .content {
+        。content {
             position: relative;
             z-index: 10;
             max-width: 1200px;
@@ -603,4 +603,5 @@
         console.log("3D神经网络代码将在这里运行");
     </script>
 </body>
+
 </html>
