--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <header class="flex flex-col items-center mb-12 text-center">
             <!-- 头像占位 -->
             <div class="w-32 h-32 bg-gradient-to-br from-primary-500 to-primary-600 rounded-full mb-6 flex items-center justify-center text-4xl font-bold">
-                <img src="touxiang.png" class="w-32 h-32 rounded-full object-cover" alt="threetwoa">
+                <img src="images/touxiang.png" class="w-32 h-32 rounded-full object-cover" alt="threetwoa">
             </div>
             <h1 class="text-4xl md:text-5xl font-bold mb-4">threetwoa</h1>
             <p class="text-xl text-primary-100 mb-2">CS Student & Aspiring Full-Stack Developer</p>
@@ -181,7 +181,7 @@
                             </div>
                         </a>
                         
-                        <a href="#" class="flex items-center p-4 bg-white/5 rounded-xl hover:bg-white/10 transition-colors group">
+                        <a href="social-security.html" class="flex items-center p-4 bg-white/5 rounded-xl hover:bg-white/10 transition-colors group">
                             <div class="bg-primary-500/20 p-3 rounded-lg mr-4 group-hover:bg-primary-500/30 transition-colors">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-primary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
