--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background: linear-gradient(to bottom, #0f172a, #0c4a6e);
             min-height: 100vh;
         }
-        .card-hover { 
+        。card-hover { 
             transition: all 0.3s ease; 
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
@@ -181,17 +181,17 @@
                             </div>
                         </a>
                         
-                        <a href="social-security.html" class="flex items-center p-4 bg-white/5 rounded-xl hover:bg-white/10 transition-colors group">
-                            <div class="bg-primary-500/20 p-3 rounded-lg mr-4 group-hover:bg-primary-500/30 transition-colors">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-primary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-                                </svg>
-                            </div>
-                            <div>
-                                <h3 class="font-medium">社保计算器</h3>
-                                <p class="text-sm text-gray-400">社保系统计算页面</p>
-                            </div>
-                        </a>
+                 <a href="social-security.html" class="flex items-center p-4 bg-white/5 rounded-xl hover:bg-white/10 transition-colors group">
+    <div class="bg-primary-500/20 p-3 rounded-lg mr-4 group-hover:bg-primary-500/30 transition-colors">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-primary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+        </svg>
+    </div>
+    <div>
+        <h3 class="font-medium">社保计算器</h3>
+        <p class="text-sm text-gray-400">社保系统计算页面</p>
+    </div>
+</a>
                         
                         <a href="#" class="flex items-center p-4 bg-white/5 rounded-xl hover:bg-white/10 transition-colors group">
                             <div class="bg-primary-500/20 p-3 rounded-lg mr-4 group-hover:bg-primary-500/30 transition-colors">
@@ -338,4 +338,5 @@
         animate();
     </script>
 </body>
+
 </html>
