--- a/smallWeb/Other/social-security.html
+++ b/smallWeb/Other/social-security.html
@@ -51,7 +51,7 @@
 	<!-- 主体 -->
 	<body>
 		<div class="container text-center" >
-			<h2>个人社保计算软件-中北大学-马楷超</h2>
+			<h2>个人社保计算软件-xx大学-路人甲</h2>
 			<table class = "table table-bordered text-center">
 				<tr>
 					<td>工资</td>
@@ -131,4 +131,5 @@
 		
 	</body>
 </html>
+
 
