维护项目板块正常跳转

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             {
                 id: 1,
                 title: "简易记事本",
-                description: "一个功能丰富的网页记事本应用，支持Markdown格式、标签分类和本地存储。具有自动保存、主题切换、搜索功能和回收站等特性。",
+                description: "一个功能比较丰富的网页记事本应用(支持md语法和预览、标签分类笔记查询和以及本地存储,自动保存,主题切换和回收站等。",
                 technologies: ["HTML", "CSS", "JavaScript", "Markdown"],
                 demoUrl: "https://threetwoa.me/Notes_MyWebSoftware/",
                 githubUrl: "https://github.com/Aafff623/Notes_MyWebSoftware",
@@ -403,7 +403,7 @@
             },
             {
                 id: 2,
-                title: "社保计算器",
+                title: "社保计算器(小作业,测试链接功能用的)",
                 description: "一个实用的社保计算工具，帮助用户计算社保缴纳金额和预估退休金。支持多种社保类型和自定义参数设置。",
                 technologies: ["HTML", "CSS", "JavaScript", "Bootstrap"],
                 demoUrl: "https://threetwoa.me/social-security-calculator/",
@@ -502,3 +502,4 @@
 </body>
 
 </html>
+
