内容更新维护样例

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
                 <div>
                     <h3 class="font-medium">项目展示</h3>
-                    <p class="text-sm text-gray-400">查看我的项目集合</p>
+                    <p class="text-sm text-gray-400">页面和项目</p>
                 </div>
             </a>
             
@@ -254,7 +254,7 @@
                     </svg>
                 </div>
                 <div>
-                    <h3 class="font-medium">学习看板</h3>
+                    <h3 class="font-medium">图形可视化展示</h3>
                     <p class="text-sm text-gray-400">任务管理与进度追踪</p>
                 </div>
             </a>
@@ -267,14 +267,10 @@
                 <div class="card-hover rounded-2xl p-6 mb-6">
                     <h2 class="text-xl font-bold mb-4 gradient-text">技术栈</h2>
                     <div class="flex flex-wrap gap-2">
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Java</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Spring</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">MySQL</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">HTML/CSS</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">JavaScript</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Tailwind</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Git</span>
-                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Linux</span>
+                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">JavaSE/MySQL/JDBC</span>
+                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">HTML/CSS/JavaScript</span>
+                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Bootstrap/Tailwind CSS</span>
+                        <span class="bg-primary-500/20 text-primary-300 px-3 py-1 rounded-full text-sm">Git/Gitee</span>
                     </div>
                 </div>
 
@@ -283,15 +279,15 @@
                     <div class="space-y-4">
                         <div>
                             <h3 class="font-medium mb-1">当前阶段</h3>
-                            <p class="text-sm text-gray-400">JavaWeb (Servlet/JSP)</p>
+                            <p class="text-sm text-gray-400">复习目前所学的前后端知识,整理个人计划,制作并且维护项目驱动学习的初版生态</p>
                         </div>
                         <div>
                             <h3 class="font-medium mb-1">下一阶段</h3>
-                            <p class="text-sm text-gray-400">SSM框架学习</p>
+                            <p class="text-sm text-gray-400">JavaWeb,Maven,SSM框架的学习,前端小组件的样例练习</p>
                         </div>
                         <div>
                             <h3 class="font-medium mb-1">长期目标</h3>
-                            <p class="text-sm text-gray-400">全栈博客系统开发</p>
+                            <p class="text-sm text-gray-400">全栈博客系统开发,项目实战的练习,一定的算法基础</p>
                         </div>
                     </div>
                 </div>
@@ -502,4 +498,5 @@
 </body>
 
 </html>
+
 
