导航栏模块内容修改

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <span class="brand">ThreeTwoA</span>
             <div>
                 <a href="#">首页</a>
-                <a href="http://threetwoa.me/threetwoa-hugoBlog/" target="_blank">博客</a>
-                <a href="#" id="projectLink">项目</a>
-                <a href="https://github.com/Aafff623?tab=repositories" target="_blank">学习看板</a>
-                <a href="#">分类</a>
-                <a href="#">友链</a>
+                <a href="http://threetwoa.me/threetwoa-hugoBlog/" target="_blank">博客日志</a>
+                <a href="#" id="projectLink">项目导览</a>
+                <a href="#">学习周报</a>
+                <a href="#">杂谈琐记</a>
+                <a href="#">资源分享</a>
                 <!-- 添加主题切换按钮 -->
                 <button class="theme-toggle" id="themeToggle" title="切换主题">
                     <svg class="theme-icon" id="themeIcon" viewBox="0 0 24 24">
