页面和记事本项目

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body class="lxgw-main">
     <!-- 顶部导航栏 -->
     <nav class="lxgw-nav">
@@ -17,7 +18,7 @@
                 <a href="#">首页</a>
                 <a href="http://threetwoa.me/threetwoa-hugoBlog/" target="_blank">博客日志</a>
                 <a href="#" id="projectLink">项目导览</a>
-                <a href="#">学习周报</a>
+                <a href="Notes/Road/FullStack_Journey.html">全栈规划</a>
                 <a href="#">杂谈琐记</a>
                 <a href="#">资源分享</a>
                 <!-- 添加主题切换按钮 -->
@@ -179,18 +180,8 @@
                     </li>
                     <li>
                         <div class="project-icon">📝</div>
-                        <a href="projects/simple-notes/index.html" target="_blank">简易笔记本</a>
+                        <a href="projects/newNotesProject/index.html" target="_blank">简易笔记本</a>
                         <div class="project-desc">在线记录和管理你的学习笔记，支持多端同步。</div>
-                    </li>
-                    <li>
-                        <div class="project-icon">🌤️</div>
-                        <a href="https://threetwoa.me/mini-weather/" target="_blank">天气小组件</a>
-                        <div class="project-desc">实时天气查询，支持城市切换和未来预报。</div>
-                    </li>
-                    <li>
-                        <div class="project-icon">📄</div>
-                        <a href="https://threetwoa.me/markdown-editor/" target="_blank">Markdown编辑器</a>
-                        <div class="project-desc">支持实时预览和导出，适合技术博客写作。</div>
                     </li>
                     <!-- 可继续添加你的项目 -->
                 </ul>
