--- a/Notes/Road/FullStack_Journey.html
+++ b/Notes/Road/FullStack_Journey.html
@@ -431,6 +431,7 @@
                 <a href="#resources" class="nav-link">资源</a>
                 <a href="#phases" class="nav-link">阶段</a>
                 <a href="#mindmap" class="nav-link">思维导图</a>
+                <a href="road.md.html" class="nav-link">原文笔记</a>
             </div>
         </div>
         <button id="backToTop" style="display:none;position:fixed;right:30px;bottom:40px;z-index:999;background:var(--primary);color:#fff;border:none;border-radius:50%;width:48px;height:48px;font-size:1.5rem;box-shadow:0 2px 8px rgba(67,97,238,0.2);cursor:pointer;transition:var(--transition);"><i class="fas fa-arrow-up"></i></button>
