--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                     <span>Bootstrap/Tailwind CSS</span>
                     <span>Git/Gitee</span>
                 </div>
-                
-                <h2>学习规划</h2>
+
+                <h2><a href="Notes/Road/ttajouery.html">学习规划</a></h2>
                 <div style="margin-bottom:14px;">
                     <h3 style="margin-bottom:4px;">当前阶段</h3>
                     <p style="color:var(--text-secondary);">复习目前所学的前后端知识,整理个人计划,制作并且维护项目驱动学习的初版生态</p>
