简易网页记事本web应用

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="images/chat.svg" alt="icon" width="30" height="30">
                     ChatNotes
                 </a>
-                <a href="#">
+                <a href="https://education.github.com/pack">
                      <img src="images/iconfont/004-robot hand.svg" alt="icon" width="30" height="30">
                      Resources
                     </a>
@@ -374,7 +374,7 @@
                     </li>
                     <li>
                         <div class="project-icon">📝</div>
-                        <a href="projects/newNotesProject/index.html" target="_blank">简易笔记本</a>
+                        <a href="projects/SimpleNotesWeb/index.html" target="_blank">简易笔记本</a>
                         <div class="project-desc">在线记录和管理你的学习笔记，支持多端同步。</div>
                     </li>
                     <!-- 可继续添加你的项目 -->
