--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <!-- 顶部导航栏 -->
     <nav class="lxgw-nav">
         <div class="nav-inner">
-             <img src="images/头像/蓝色卡通小人.svg" alt="品牌" width="40" height="40">
+               <div id="study-plan-animation" style="width:80px;height:80px;margin:auto;display:inline-block;"></div>
             <span class="brand">
                 <a href="index.html">
                     ThreeTwoA
                 </a>
-                
             </span>
             <div>
-                <a href="#">
+                <a href="https://threetwoa.me" target="_blank">
                     <img src="images/头像/首页小人.svg" alt="icon" width="30" height="30">
                     Home
                 </a>
@@ -47,7 +46,17 @@
                      Resources
                     </a>
                 <!-- 添加主题切换按钮 -->
-                <button class="theme-toggle" id="themeToggle" title="切换主题">
+            </div>
+        </div>
+    </nav>
+    <!-- 欢迎横幅 -->
+    <div class="welcome-banner" style="text-align:center;">
+         <div id="carRun-animation" style="width: 250px; height: 165px; margin: 0 ;"></div>
+          <div id="light-animation" style="width:100px;height:100px;"></div>
+        <!-- <img src="images/iconfont/标签.svg" alt="icon" width="100" height="50"> -->
+        <span>
+            君来此处，风雅自生
+            <button class="theme-toggle" id="themeToggle" title="切换主题">
                     <svg class="theme-icon" id="themeIcon" viewBox="0 0 24 24">
                         <!-- 月亮图标 -->
                         <path class="moon-icon" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
@@ -63,15 +72,6 @@
                         <line class="sun-icon" x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
                     </svg>
                 </button>
-            </div>
-        </div>
-    </nav>
-    <!-- 欢迎横幅 -->
-    <div class="welcome-banner" style="text-align:center;">
-          <div id="light-animation" style="width:100px;height:100px;"></div>
-        <img src="images/iconfont/标签.svg" alt="icon" width="100" height="50">
-        <span>
-            君来此处，风雅自生
             <hr>
             Welcome to my personal portfolio!
         </span>
@@ -82,13 +82,18 @@
             <div class="avatar-large">
                 <img src="images/wx头像.jpg" alt="threetwoa">
             </div>
+            <!-- 在头像下方、名字左侧插入动画容器 -->
             <h1>
                 threetwoa
                 <img src="images/Iconscout/黄发小人.svg" alt="icon" width="100" height="100">
             </h1>
-            <p>CS sophomore (software engineering)</p>
+           
+            <p>CS Sophomore (Software Engineering)</p>
             <p class="desc">Goals: Full-Stack Developer</p>
-            <p class="desc">专注于Web开发与Java后端学习，通过项目驱动成长</p>
+            <p class="desc">
+                 时间和我都在往前走-Time and I both move forward
+                 <div id="colorfulLoading-animation" style="width: 250px; height: 165px; margin: 0  auto;"></div>
+            </p>
             <div class="links">
                 <a href="https://github.com/Aafff623" target="_blank" title="GitHub">
                     <img src="images/github.svg" alt="icon" width="30" height="20">
@@ -323,7 +328,6 @@
                 </details> -->
 
                 <h2><a href="Notes/Road/ttajouery.html">
-                    <div id="study-plan-animation" style="width:80px;height:80px;margin:auto;display:inline-block;"></div>
                     Study Plan</a></h2>
                 <div style="margin-bottom:14px;">
                     <h3 style="margin-bottom:4px;">Current Stage</h3>
