--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     Home
                 </a>
                 <a href="http://threetwoa.me/threetwoa-hugoBlog/" target="_blank">
-                    <img src="images/blogger.svg" alt="icon" width="30" height="30">
+                    <img src="/images/blogger.svg" alt="icon" width="30" height="30">
                     Blog
                 </a>
                 <a href="#" id="projectLink">
