个人主页(记事本)

--- a/projects/SimpleNotesWeb/index.html
+++ b/projects/SimpleNotesWeb/index.html
@@ -670,7 +670,8 @@
           <img src="images/wx头像.jpg" alt="me" class="w-24 h-24 rounded-full mx-auto border-4 border-indigo-200 dark:border-indigo-700 shadow-lg">
         </div>
         <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-          这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。
+          这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。<br>
+          如果有兴趣,可以访问我的个人主页查找更多的项目:https://threetwoa.me/<br>
         </p>
         <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4">
           <h6 class="font-semibold text-indigo-600 dark:text-indigo-400 mb-2">主要功能</h6>
