--- a/projects/SimpleNotesWeb/index.html
+++ b/projects/SimpleNotesWeb/index.html
@@ -672,6 +672,14 @@
         <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
           这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。<br>
           如果有兴趣,可以访问我的个人主页查找更多的项目:https://threetwoa.me/<br>
+          <ul>
+            项目结构：
+            <li>index.html：页面骨架与模块区域。</li>
+            <li>css/style.css：主题样式与布局微调。</li>
+            <li>js/app.js：状态管理、事件绑定、数据持久化、渲染逻辑。</li>
+            <li>lib/：第三方库的本地文件。</li>
+            <li>images/：图标与头像资源</li>
+          </ul>
         </p>
         <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4">
           <h6 class="font-semibold text-indigo-600 dark:text-indigo-400 mb-2">主要功能</h6>
