--- a/projects/SimpleNotesWeb/index.html
+++ b/projects/SimpleNotesWeb/index.html
@@ -669,27 +669,31 @@
         <div class="mb-4">
           <img src="images/wx头像.jpg" alt="me" class="w-24 h-24 rounded-full mx-auto border-4 border-indigo-200 dark:border-indigo-700 shadow-lg">
         </div>
-        <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+        <div class="mb-4 text-gray-700 dark:text-gray-300 leading-relaxed text-left">
+          <p>
           这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。<br>
-          如果有兴趣,可以访问我的个人主页查找更多的项目:https://threetwoa.me/<br>
-          <ul>
-            项目结构：
-            <li>index.html：页面骨架与模块区域。</li>
-            <li>css/style.css：主题样式与布局微调。</li>
-            <li>js/app.js：状态管理、事件绑定、数据持久化、渲染逻辑。</li>
-            <li>lib/：第三方库的本地文件。</li>
-            <li>images/：图标与头像资源</li>
+          如果有兴趣，可以访问我的个人主页查找更多的项目：<a href="https://threetwoa.me/" target="_blank" class="text-indigo-600 dark:text-indigo-400 underline">https://threetwoa.me/</a>
+          </p>
+          <div class="mt-3">
+          <span class="font-semibold text-indigo-600 dark:text-indigo-400">项目结构：</span>
+          <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
+            <li><span class="font-medium">index.html：</span> 页面骨架与模块区域。</li>
+            <li><span class="font-medium">css/style.css：</span> 主题样式与布局微调。</li>
+            <li><span class="font-medium">js/app.js：</span> 状态管理、事件绑定、数据持久化、渲染逻辑。</li>
+            <li><span class="font-medium">lib/：</span> 第三方库的本地文件。</li>
+            <li><span class="font-medium">images/：</span> 图标与头像资源。</li>
           </ul>
-        </p>
-        <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4">
+          </div>
+        </div>
+        <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4 text-left">
           <h6 class="font-semibold text-indigo-600 dark:text-indigo-400 mb-2">主要功能</h6>
-          <ul class="text-sm text-gray-600 dark:text-gray-400 space-y-1">
+          <ul class="list-none space-y-2">
           <li class="flex items-center gap-2"><i class="fas fa-edit text-indigo-500"></i> 文本编辑</li>
           <li class="flex items-center gap-2"><i class="fas fa-folder text-indigo-500"></i> 分类管理</li>
           <li class="flex items-center gap-2"><i class="fas fa-tag text-indigo-500"></i> 标签系统</li>
           </ul>
         </div>
-        <div class="text-sm text-gray-500 dark:text-gray-400 space-y-1">
+        <div class="text-sm text-gray-500 dark:text-gray-400 space-y-1 text-left">
           <p><strong>版本:</strong> 0.1</p>
           <p><strong>开发者:</strong> threetwoa</p>
         </div>
