--- a/projects/SimpleNotesWeb/index.html
+++ b/projects/SimpleNotesWeb/index.html
@@ -6,11 +6,20 @@
     <title>简易网页笔记应用</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.snow.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.snow.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
-   <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body
@@ -30,8 +39,11 @@
         <span
           class="text-2xl font-bold tracking-tight text-indigo-600 dark:text-indigo-400 flex items-center gap-2"
         >
-          <img src="images/笔记.svg" alt="笔记"
-            style="width:30px;height:30px;">
+          <img
+            src="images/笔记.svg"
+            alt="笔记"
+            style="width: 30px; height: 30px"
+          />
           简易网页笔记应用
         </span>
       </div>
@@ -39,8 +51,11 @@
         <div
           class="hidden md:flex items-center bg-gray-100 dark:bg-gray-700 rounded-full px-3 py-1"
         >
-          <img src="images/搜索.svg" alt="搜索"
-            style="width:20px;height:20px;">
+          <img
+            src="images/搜索.svg"
+            alt="搜索"
+            style="width: 20px; height: 20px"
+          />
           <input
             id="searchInput"
             type="text"
@@ -161,8 +176,7 @@
               id="categoryFilter"
               class="flex-1 text-sm rounded border-gray-300 dark:border-gray-600 dark:bg-gray-800 p-2 dark:text-white"
             >
-              <option value="">
-                所有分类</option>
+              <option value="">所有分类</option>
             </select>
             <select
               id="tagFilter"
@@ -653,61 +667,87 @@
     <!-- 模态框：关于 -->
     <div class="modal fade" id="aboutModal" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content bg-white dark:bg-gray-800 border-0 shadow-2xl rounded-2xl">
-        <div class="modal-header bg-gradient-to-r from-indigo-500 to-purple-600 text-white rounded-t-2xl">
-        <h5 class="modal-title text-xl font-bold flex items-center gap-2">
-          <i class="fas fa-info-circle"></i> 关于简易网页笔记应用
-        </h5>
-        <button
-          type="button"
-          class="btn-close btn-close-white"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-        </div>
-        <div class="modal-body p-6 text-center">
-        <div class="mb-4">
-          <img src="images/wx头像.jpg" alt="me" class="w-24 h-24 rounded-full mx-auto border-4 border-indigo-200 dark:border-indigo-700 shadow-lg">
-        </div>
-        <div class="mb-4 text-gray-700 dark:text-gray-300 leading-relaxed text-left">
-          <p>
-          这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。<br>
-          如果有兴趣，可以访问我的个人主页查找更多的项目：<a href="https://threetwoa.me/" target="_blank" class="text-indigo-600 dark:text-indigo-400 underline">https://threetwoa.me/</a>
-          </p>
-          <div class="mt-3">
-          <span class="font-semibold text-indigo-600 dark:text-indigo-400">项目结构：</span>
-          <ul class="list-disc list-inside ml-4 mt-1 space-y-1">
-            <li><span class="font-medium">index.html：</span> 页面骨架与模块区域。</li>
-            <li><span class="font-medium">css/style.css：</span> 主题样式与布局微调。</li>
-            <li><span class="font-medium">js/app.js：</span> 状态管理、事件绑定、数据持久化、渲染逻辑。</li>
-            <li><span class="font-medium">lib/：</span> 第三方库的本地文件。</li>
-            <li><span class="font-medium">images/：</span> 图标与头像资源。</li>
-          </ul>
+        <div
+          class="modal-content bg-white dark:bg-gray-800 border-0 shadow-2xl rounded-2xl"
+        >
+          <div
+            class="modal-header bg-gradient-to-r from-indigo-500 to-purple-600 text-white rounded-t-2xl"
+          >
+            <h5 class="modal-title text-xl font-bold flex items-center gap-2">
+              <i class="fas fa-info-circle"></i> 关于简易网页笔记应用
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body p-6 text-center">
+            <div class="mb-4">
+              <img
+                src="images/wx头像.jpg"
+                alt="me"
+                class="w-24 h-24 rounded-full mx-auto border-4 border-indigo-200 dark:border-indigo-700 shadow-lg"
+              />
+            </div>
+            <div
+              class="mb-4 text-gray-700 dark:text-gray-300 leading-relaxed text-left"
+            >
+              <p>
+                这是一个简易版网页的笔记管理页面，一个麻雀虽小、五脏俱全的笔记应用。<br />
+                如果有兴趣，可以访问我的个人主页查找更多的项目：<a
+                  href="https://threetwoa.me/"
+                  target="_blank"
+                  class="text-indigo-600 dark:text-indigo-400 underline"
+                  >https://threetwoa.me/</a
+                >
+              </p>
+              <div class="mt-3">
+                <span class="font-semibold text-indigo-600 dark:text-indigo-400"
+                  >项目结构：</span
+                >
+              </div>
+            </div>
+            <div
+              class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4 text-left"
+            >
+              <h6
+                class="font-semibold text-indigo-600 dark:text-indigo-400 mb-2"
+              >
+                主要功能
+              </h6>
+              <ul class="list-none space-y-2">
+                <li class="flex items-center gap-2">
+                  <i class="fas fa-edit text-indigo-500"></i> 文本编辑
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class="fas fa-folder text-indigo-500"></i> 分类管理
+                </li>
+                <li class="flex items-center gap-2">
+                  <i class="fas fa-tag text-indigo-500"></i> 标签系统
+                </li>
+              </ul>
+            </div>
+            <div
+              class="text-sm text-gray-500 dark:text-gray-400 space-y-1 text-left"
+            >
+              <p><strong>版本:</strong> 0.1</p>
+              <p><strong>开发者:</strong> threetwoa</p>
+            </div>
+          </div>
+          <div
+            class="modal-footer border-0 bg-gray-50 dark:bg-gray-700 rounded-b-2xl"
+          >
+            <button
+              type="button"
+              class="btn btn-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg"
+              data-bs-dismiss="modal"
+            >
+              <i class="fas fa-times mr-1"></i> 关闭
+            </button>
           </div>
         </div>
-        <div class="bg-indigo-50 dark:bg-indigo-900/20 rounded-lg p-4 mb-4 text-left">
-          <h6 class="font-semibold text-indigo-600 dark:text-indigo-400 mb-2">主要功能</h6>
-          <ul class="list-none space-y-2">
-          <li class="flex items-center gap-2"><i class="fas fa-edit text-indigo-500"></i> 文本编辑</li>
-          <li class="flex items-center gap-2"><i class="fas fa-folder text-indigo-500"></i> 分类管理</li>
-          <li class="flex items-center gap-2"><i class="fas fa-tag text-indigo-500"></i> 标签系统</li>
-          </ul>
-        </div>
-        <div class="text-sm text-gray-500 dark:text-gray-400 space-y-1 text-left">
-          <p><strong>版本:</strong> 0.1</p>
-          <p><strong>开发者:</strong> threetwoa</p>
-        </div>
-        </div>
-        <div class="modal-footer border-0 bg-gray-50 dark:bg-gray-700 rounded-b-2xl">
-        <button
-          type="button"
-          class="btn btn-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg"
-          data-bs-dismiss="modal"
-        >
-          <i class="fas fa-times mr-1"></i> 关闭
-        </button>
-        </div>
-      </div>
       </div>
     </div>
 
@@ -716,6 +756,5 @@
     <script src="https://cdn.jsdelivr.net/npm/quill@1.3.7/dist/quill.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="js/app.js"></script>
-
   </body>
 </html>
